# ChangeLog for games-action/teewars
# Copyright 2008-2008 Gentoo Foundation; Distributed under the GPL v2

  15 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> -teeworlds-9999.ebuild:
  No longer updated.

  05 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl> -teeworlds-0.4.0.ebuild,
  +teeworlds-0.4.2.ebuild:
  Version bump.

  23 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teeworlds-0.4.1.ebuild:
  Version bump. minor ebuild fixes.

  23 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teeworlds-0.4.0.ebuild,
  +teeworlds-9999.ebuild:
  Changed name to teeworlds, updated to latest version.
  Rekeyworded svn version to "".
  Removed previous versions with old name.

  16 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-9999.ebuild,
  -files/teewars-different-svn-config-dir-and-cleanup.patch:
  Removed patch.

  10 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-9999.ebuild,
  -files/teewars-different-version.patch:
  Removed, fixed in source.

*teewars-0.3.4 (09 Feb 2008)

  09 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teewars-0.3.4.ebuild:
  Version bump.

  09 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-9999.ebuild,
  +files/teewars-different-svn-config-dir-and-cleanup.patch,
  +files/teewars-different-version.patch:
  Added two patches.

  07 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-0.3.3.ebuild:
  Removed useless exeinto.

*teewars-9999 (07 Feb 2008)

  07 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teewars-9999.ebuild:
  Initial live ebuild.

  29 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-0.3.3.ebuild:
  Added "serveronly" USE flag.
  Added sed in src_unpack. Idea barrowed from Maxim A. Novoselov
  (bug #206287).
  Changed wraper to dogamesbin.
  Removed default -O2 bam optimisation.
  Added changes suggested by Mr. Bones (bug #206287)

  28 Jan 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-0.3.3.ebuild:
  Introducing ebuild from source and with optimisation!
  Old ebuild moved to games-action/teewars-bin.
