@@ -1,6 +1,4 @@
 DIST bam.zip 478660 RMD160 a116a8a6750bbe00c07333af12827eded2b207d9 SHA1 bf26973d4eee40c4128b738a08f79ecfa73b4ef7 SHA256 db78d80b88fd05a07fc1ab29a9bcd060c2d0c2c214c6122861ff4d6d409ae937
-DIST teeworlds-0.4.1-src.tar.gz 5047200 RMD160 64f043cdcd0b5a91392976fb5647025be6bb7001 SHA1 020064f6ee70ef8cb4d950bdc5499caf3d88f0f3 SHA256 14d50351ffba0e6e38dc87a017fa869120dd7cfa957815531583285419b8fad2
 DIST teeworlds-0.4.2-src.tar.gz 5050346 RMD160 49c647c0912d6e45b2c329e9307d15160f54dc89 SHA1 cca29006b79a2825ade2e908cd2e5286c22401c9 SHA256 da7fed1d6d51b2f2fccfc106a08dec31a702be01e20ed751e328d2ebd462c7b4
-EBUILD teeworlds-0.4.1.ebuild 3050 RMD160 5db9605752e4dec56092ced1903eb680e79e30bf SHA1 7af201c8577bf85bcff65e0ee3714a52f01041c9 SHA256 b3ffbdbd3e41cb5a2a4799496a6a1182f4245984e0664a1bde79dbafedb50a6b
-EBUILD teeworlds-0.4.2.ebuild 3050 RMD160 5db9605752e4dec56092ced1903eb680e79e30bf SHA1 7af201c8577bf85bcff65e0ee3714a52f01041c9 SHA256 b3ffbdbd3e41cb5a2a4799496a6a1182f4245984e0664a1bde79dbafedb50a6b
-MISC ChangeLog 2794 RMD160 d793f9444b75a39b9952948030ca891f2da39371 SHA1 99c609081e57abce5225937c5b04eb9dc31e21fc SHA256 949ef1c0faf4460d23f6a3c0d9b5614496764a16ae647056ba3cdb7264cd68d0
+EBUILD teeworlds-0.4.2.ebuild 3052 RMD160 61a7f5464ec407252db978227d4513358e2ecdc3 SHA1 1dcf8b289d620d2c73a01ef2825902841608fc19 SHA256 7bc9b80dd64820a5ee1d2a0ab98cd586733c762456423f614698a838ea7fa968
+MISC ChangeLog 2911 RMD160 39c1107064619587fcceb824ea75d84add5f1374 SHA1 d19f808254e89db71a111aa34c581eb64abca04a SHA256 4c49df3e736babd09540d972208cb878f1820388e5f31b547c01b5c236492244
